# ing-software-softsapiens

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  test.yml  test_character_view.yml
tarantinoverse/: .gitignore  .sconsign.dblite  SConstruct  register_types.cpp  register_types.os  run_tests  test-ObjectPresenter.gcno
tarantinoverse/Core/: ObjectType.h
tarantinoverse/Model/: BaseMenuModel.h  BulletModel.cpp  BulletModel.h  BulletModel.os  CharacterModel.cpp  CharacterModel.h  CharacterModel.os  CreditsMenuModel.h  EnemyModel.h  MainMenuModel.h  ObjectModel.cpp  ObjectModel.h  ObjectModel.os  OptionsMenuModel.h  PauseMenuModel.h
tarantinoverse/Presenter/: BaseMenuPresenter.cpp  BaseMenuPresenter.h  BaseMenuPresenter.os  BulletPresenter.cpp  BulletPresenter.h  BulletPresenter.os  CharacterPresenter.cpp  CharacterPresenter.h  CharacterPresenter.os  CreditsMenuPresenter.cpp  CreditsMenuPresenter.h  CreditsMenuPresenter.os  EnemyPresenter.cpp  EnemyPresenter.h  EnemyPresenter.os  MainMenuPresenter.cpp  MainMenuPresenter.h  MainMenuPresenter.os  ObjectPresenter.cpp  ObjectPresenter.h  ObjectPresenter.os  OptionsMenuPresenter.cpp  OptionsMenuPresenter.h  OptionsMenuPresenter.os  PauseMenuPresenter.cpp  PauseMenuPresenter.h  PauseMenuPresenter.os
tarantinoverse/View/: AudioManager.cpp  AudioManager.h  AudioManager.os  BaseMenuView.cpp  BaseMenuView.h  BaseMenuView.os  BulletView.cpp  BulletView.h  BulletView.os  CharacterView.cpp  CharacterView.h  CharacterView.os  CreditsMenuView.cpp  CreditsMenuView.h  CreditsMenuView.os  EnemyView.cpp  EnemyView.h  EnemyView.os  MainMenuView.cpp  MainMenuView.h  MainMenuView.os  ObjectView.cpp  ObjectView.h  ObjectView.os  OptionsMenuView.cpp  (+6 more)
tests/: CMakeLists.txt  test_character_view.cpp
(+404 files in other folders)
